syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package Dto;

message AreaDto {
  int32 area = 1;
  string info = 2;
}
