syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package Dto;

message StorageDto {
  int32 id = 1;
  int32 accountid = 2;
  int32 slots = 3;
  int32 meso = 4;
}
