syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package Dto;

message TrockLocationDto {
  int32 characterid = 1;
  int32 mapid = 2;
  int32 vip = 3;
}
